# PyFxP

./: .gitignore  pyproject.toml  setup.py
PyFxP/: __init__.py  fix_point.py  registry.py
test/: test_fixed_point.py  test_registry.py
