[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfxp"
version = "0.1.0"
description = "Fixed-point design and HDL generation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = ["numpy", "jinja2"]
requires-python = ">=3.8"
